--- a/README
+++ b/README
@@ -1,14 +1,13 @@
-*histwin.txt*  Plugin to browse the undo-tree
+*histwin.txt*	For Vim version 7.3	Last change: 2010 Nov. 18
 
-Version: 0.20 Wed, 20 Oct 2010 22:16:51 +0200
 Author:  Christian Brabandt <cb@256bit.org>
-Copyright: (c) 2009, 2010 by Christian Brabandt             *histwin-copyright*
+Copyright: (c) 2009, 2010 by Christian Brabandt           *histwin-copyright*
            The VIM LICENSE applies to histwin.vim and histwin.txt
            (see |copyright|) except use histwin instead of "Vim".
            NO WARRANTY, EXPRESS OR IMPLIED.  USE AT-YOUR-OWN-RISK.
 
-==============================================================================
-1. Contents                                                  *histwin-contents*
+=============================================================================
+1. Contents                                                 *histwin-contents*
 
 1. Contents.................................................|histwin-contents|
 2. Functionality............................................|histwin-plugin|
@@ -23,8 +22,8 @@ Copyright: (c) 2009, 2010 by Christian Brabandt             *histwin-copyright*
 5. Feedback.................................................|histwin-feedback|
 6. History..................................................|histwin-history|
 
-==============================================================================
-                                                        *histwin-plugin* *histwin*
+=============================================================================
+                                                    *histwin-plugin* *histwin*
 2. Functionality
 
 This plugin was written to allow an easy way of browsing the |undo-tree|, that
@@ -40,38 +39,38 @@ any of these states. It opens a new window, which contains all available
 states and using this plugin allows you to tag a previous change or go back to
 a particular state.
 
-                                                        *histwin-browse* *:UB*
+                                                       *histwin-browse* *:UB*
 2.1 Opening the Undo-Tree Window
 
 By default you can open the Undo-Tree Window by issuing :UB (Mnemonic:
 UndoBrowse). If you do this, you will see a window that looks
 like this:
 
-+------------------------------------------------------+
-|Undo-Tree: FILENAME           |#!/bin/bash            |
-|======================        |                       |
-|                              |                       |
-|" actv. keys in this window   |if [ $# -ne 2 ];  the  |
-|" I toggles help screen       |    echo "Name: $0: arg|
-|" <Enter> goto undo branch    |    echo               |
-|" <C-L>   Update view         |    exit 1             |
-|" T       Tag sel. branch     |fi                     |
-|" P       Toggle view         |                       |
-|" D       Diff sel. branch    |if true; then          |
-|" U       Preview unif. Diff  |                       |
-|" R       Replay sel. branch  |    dir="${1%/*}"      |
-|" C       Clear all tags      |    file="${1##*/}"    |
-|" Q       Quit window         |    target="${2}/${di  |
-|"                             |    if [ ! -e "${targ  |
-|" Undo-Tree, v0.20            |        mkdir -p "$ta  |
-|                              |        mv "$1" "$tar  |
-|Nr   Time   Fl  Tag           |                       |
-|1)   Sep 01    /Start Editing/|                       |
-|2)   Sep 01 !  /First draft/  |                       |
-|3) 23:01:22                   |                       |
-|4) 23:02:57 *  /Release 1/    |                       |
-|5) 23:05:04                   |                       |
-+------------------------------------------------------+
++------------------------------------------------------+`
+|Undo-Tree: FILENAME           |#!/bin/bash            |`
+|======================        |                       |`
+|                              |                       |`
+|" actv. keys in this window   |if [ $# -ne 2 ];  the  |`
+|" I toggles help screen       |    echo "Name: $0: arg|`
+|" <Enter> goto undo branch    |    echo               |`
+|" <C-L>   Update view         |    exit 1             |`
+|" T       Tag sel. branch     |fi                     |`
+|" P       Toggle view         |                       |`
+|" D       Diff sel. branch    |if true; then          |`
+|" U       Preview unif. Diff  |                       |`
+|" R       Replay sel. branch  |    dir="${1%/*}"      |`
+|" C       Clear all tags      |    file="${1##*/}"    |`
+|" Q       Quit window         |    target="${2}/${di  |`
+|"                             |    if [ ! -e "${targ  |`
+|" Undo-Tree, v0.20            |        mkdir -p "$ta  |`
+|                              |        mv "$1" "$tar  |`
+|Nr   Time   Fl  Tag           |                       |`
+|1)   Sep 01    /Start Editing/|                       |`
+|2)   Sep 01 !  /First draft/  |                       |`
+|3) 23:01:22                   |                       |`
+|4) 23:02:57 *  /Release 1/    |                       |`
+|5) 23:05:04                   |                       |`
++------------------------------------------------------+`
 
 This shows an extract of a sample file on the right side. The window on the
 left side, contains an overview of all available states that are known for
@@ -135,7 +134,7 @@ the histwin plugin stores needs to store a nested Dictionary, Vim might still
 fail reading it back correctly)
 
 ==============================================================================
-                                                                *histwin-keys*
+                                                               *histwin-keys*
 3. Keybindings
 
 By default, the following keys are active in Normal mode in the Undo-Tree
@@ -318,7 +317,7 @@ to a much higher value, like 10,000 or even higher. This will however increase
 the memory usage quite a lot.
 
 ==============================================================================
-                                                            *histwin-feedback*
+                                                           *histwin-feedback*
 5. Feedback
 
 Feedback is always welcome. If you like the plugin, please rate it at the
@@ -332,9 +331,12 @@ Please don't hesitate to report any bugs to the maintainer, mentioned in the
 third line of this document.
 
 ==============================================================================
-                                                             *histwin-history*
+                                                            *histwin-history*
 6. histwin History
 
+0.21    - more standard like help files
+        - make sure, the autoload script is only called when needed
+	  (and not on startup)
 0.20    - Enable storing the tags as Dicionary in .viminfo
           (this might not work as expected, cause we are storing a nested
           Dictionary)
@@ -352,8 +354,8 @@ third line of this document.
           Thanks!)
         - More error handling (when the cursor is not on a list item)
         - Commenting out the entry to store the histdict in a global variable,
-          that should be written to the .viminfo file (but is not yet supported
-          by plain vim)
+          that should be written to the .viminfo file (but is not yet
+          supported by plain vim)
 0.14    - don't fix the width of the histwin window
         - now use the undotree() function by default (if patch 7.3.005 is
           included)
@@ -423,4 +425,4 @@ third line of this document.
         - allow switching to initial load state, before
           buffer was edited
 ==============================================================================
-vim:tw=78:ts=8:ft=help:et
+vim:tw=78:ts=8:ft=help:norl:
