--- a/README
+++ b/README
@@ -320,7 +320,8 @@ Reopen the histwin window.
 
 ------------------------------------------------------------------------------
 
-							    *histwin-highl* *:ID*
+						    *histwin-highl*
+						    *:HistID*
 4.5 Highlight changed lines
 
 The histwin plugin also allows to automatically highlight those lines, that
@@ -344,9 +345,9 @@ check your buffer for changes against the last saved version. To disable this
 feature, simply set this variable to 0.
 
 If you don't want to have these signs put on permanently, you can also invoke
-the command (:ID, Mnemonic: IndicateDifferences) manually: >
+the command (:HistID, Mnemonic, IndicateDifferences) manually: >
 
-    :ID
+    :HistID
 <
 which will place the signs in your buffer only once and is not as disturbing
 as an auto command is.
@@ -369,6 +370,8 @@ third line of this document.
                                                             *histwin-history*
 6. histwin History
 
+0.24    - :ID is already defined by visincr plugin
+          instead use the command :HistID
 0.23    - Purge Undo history with 'X'
 0.22    - Display signs for changed lines
         - |:ID|
